<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/terms_service"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/eb_garamond_medium" />

        <ImageView
            android:id="@+id/btn_close_terms"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_x"
            android:contentDescription="@string/close" />
    </RelativeLayout>

    <!-- Body -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/terms_body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_body"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.0"
            android:fontFamily="@font/eb_garamond_medium" />
    </ScrollView>
</LinearLayout>
